<resources>
    <string name="app_name">Ababil</string>
    <string name="title_activity_login">Sign in</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="comfirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="intro_title_1">Transfer</string>
    <string name="intro_1">Butter smooth money transfer \nacross multiple banks</string>
    <string name="intro_title_2">Mobile Top-Up</string>
    <string name="intro_2">Top up your mobile balance \nanytime, anywhere</string>
    <string name="intro_title_3">Bill Payment</string>
    <string name="intro_3">Pay utility bills \nwithout any hassle and save acc_no</string>
    <string name="intro_title_4">And many more..</string>
    <string name="intro_4">Bunch of other goodies \nwaiting for you</string>

    <string name="start">Get Start</string>
    <string name="tutorial_done">DONE</string>
    <string name="tutorial_skip">SKIP</string>

    <string name="create">Create Account</string>
    <string name="forgot">Forget Password?</string>
    <string name="signup">Sign Up</string>


    <string name="verify_txt">Awesome, Thanks!</string>
    <string name="varify">We have sent the confirmation code to your email,\nplease check your inbox.</string>
    <string name="resend">Resend</string>

    <string name="report">Report</string>
    <string name="tool">Tools</string>
    <string name="connect">Get Connected</string>
    <string name="setting">Settings</string>
    <string name="logout">Logout</string>

    <string name="dash">Dashboard</string>
    <string name="fav">FAVOURITE</string>
    <string name="transfer">TRANSFER</string>
    <string name="bill_pay">BILL PAYMENT</string>

    <string name="mobile">Mobile Number</string>
    <string name="network">Choose Network</string>


</resources>
