<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.FindRestaurantActivity">

    <group android:id="@+id/grp1" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_pie_chart_black_24dp"
            android:title="@string/report" />

        <item
            android:id="@+id/nav_order"
            android:icon="@mipmap/ic_favorite_black_24dp"
            android:title="@string/tool" />

        <item
            android:id="@+id/nav_notification"
            android:icon="@mipmap/ic_mode_comment_black_24dp"
            android:title="@string/connect" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@mipmap/ic_settings_black_24dp"
            android:title="@string/setting" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@mipmap/ic_power_settings_new_black_24dp"
            android:title="@string/logout" />
    </group>

</menu>
