<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:id="@+id/root">

<ImageView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:src="@drawable/ababillogo2"
    android:padding="@dimen/margin_20"
    android:background="@color/colorPrimaryDark"
    />

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="2"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_35"
        >

        <!--<ScrollView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent">-->
            <!---->
            <!---->
      <!---->

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="vertical"-->
        <!--&gt;-->

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.mislbd.ababil.widget.AppEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="text"
            android:drawableRight="@mipmap/ic_perm_identity_black_18dp"
            android:maxLines="1"
            android:padding="@dimen/margin_15"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.mislbd.ababil.widget.AppEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:drawableRight="@mipmap/ic_lock_outline_black_18dp"
            android:maxLines="1"
            android:padding="@dimen/margin_15"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <com.mislbd.ababil.widget.AppButton
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:textColor="@android:color/white"
        android:textSize="@dimen/txt_size_16"
        android:text="@string/action_sign_in"
        android:layout_marginTop="@dimen/margin_25"

        />

        <!--</LinearLayout>-->
        <!--</ScrollView>-->

</LinearLayout>


    <com.mislbd.ababil.widget.AppTextViewRegular
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/txt_size_18"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/margin_15"

        />

    <com.mislbd.ababil.widget.AppTextViewRegular
        android:id="@+id/forget_psw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/txt_size_18"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:padding="@dimen/margin_15"

        />

    </RelativeLayout>

</LinearLayout>