<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/wall04"
        />



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bule_transparent"
        >

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_arrow_back_white_24dp"
            android:layout_margin="@dimen/margin_10"
            />

        <com.mislbd.ababil.utils.FaceView
            android:id="@+id/faceView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_35"
            android:gravity="center" />

        <com.mislbd.ababil.widget.AppTextViewRegular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_txt"
            android:textSize="@dimen/txt_size_22"
            android:textColor="@android:color/white"
            android:padding="@dimen/txt_padding_10"
            android:layout_below="@id/faceView"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            />


        <LinearLayout
            android:id="@+id/signup_layer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:padding="@dimen/margin_15"
            >

            <com.mislbd.ababil.widget.AppTextViewRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already have an account? "
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/txt_size_18"
                android:gravity="center"
                android:layout_gravity="center_vertical"

                />
            <com.mislbd.ababil.widget.AppTextViewRegular
                android:id="@+id/go_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in"
                android:textColor="@android:color/white"
                android:textSize="@dimen/txt_size_18"
                android:gravity="center"
                android:layout_gravity="center_vertical"

                />


        </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_above="@id/signup_layer"
                android:layout_margin="@dimen/margin_30"
                >





                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel"
                    android:layout_marginTop="@dimen/margin_5"
                    >

                    <com.mislbd.ababil.widget.AppEditText
                        android:id="@+id/code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter Code"
                        android:textColorHint="@color/colorAccent"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/txt_size_14"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="@dimen/margin_15"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

<com.mislbd.ababil.widget.AppTextViewRegular
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/varify"
    android:textSize="@dimen/txt_size_14"
    android:textColor="@color/colorAccent"
    android:padding="@dimen/txt_padding_5"
    android:layout_marginTop="@dimen/margin_15"
    android:layout_centerHorizontal="true"
    android:gravity="center"/>

                <com.mislbd.ababil.widget.AppTextViewBold
                    android:id="@+id/resend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/resend"
                    android:textSize="@dimen/txt_size_18"
                    android:textColor="@android:color/white"
                    android:padding="@dimen/txt_padding_10"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"/>

                <com.mislbd.ababil.widget.AppButton
                    android:id="@+id/sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_bg"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/txt_size_16"
                    android:text="@string/signup"
                    android:layout_marginTop="@dimen/margin_30"

                    />


            </LinearLayout>



    </RelativeLayout>
</RelativeLayout>
